Wed Apr 23 22:22:19 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/naomi/GNC.cpp:
        
          File was missing from the repo.
          
        * MDE/GME/naomi/GNC_App.h:
        * MDE/GME/naomi/GNC_App.cpp:

          Now is it possible to write simple attributes to XML files.
          
Wed Apr 23 19:21:14 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/naomi:
        * MDE/GME/naomi/GNC.mpc:
        * MDE/GME/naomi/GNC_App.h:
        * MDE/GME/naomi/GNC_App.cpp:
        * MDE/GME/naomi/URI_Tag_Parser.h:
        * MDE/GME/naomi/URI_Tag_Parser.cpp:

          Initial commit of the GME connector for NAOMI. Right now, the
          connector has to ability to:

          1. list NAOMI attributes in the GME model
          2. input simple NAOMI attributes into the GME model.

Tue Apr 22 23:36:32 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/Node_Daemon/Node_Daemon.mpc:

          Disabled the CUTS_Node_Daemon_Xsc_IDL project.

Tue Apr 22 23:28:21 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/Node_Daemon/Client_Options.h:
        * cuts/utils/Node_Daemon/Client_Options.cpp:
        * cuts/utils/Node_Daemon/Node_Daemon.idl:
        * cuts/utils/Node_Daemon/Node_Daemon_Client.cpp:
        * cuts/utils/Node_Daemon/Node_Daemon_Server.cpp:
        * cuts/utils/Node_Daemon/Node_Daemon_i.h:
        * cuts/utils/Node_Daemon/Node_Daemon_i.cpp:

          There are now three waits to shutdown the server:
          . WAIT   - wait for the owned tasks to terminate
          . FORCE  - force termination of owned tasks
          . NOWAIT - do not wait for task to terminate, just exit

          The method for shutting down the server is down by the
          client application using the --shutdown=[wait|force|nowait]
          commandline parameter.

Tue Apr 22 23:09:23 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
