@@ -1,14 +1,22 @@
+Wed Apr 23 22:55:15 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * MDE/GME/naomi/GNC_App.cpp:
+        
+          Now the connector will validate the owner of the attribute
+          against the paradign name. This is to ensure the model 
+          owns the attribute.
+
 Wed Apr 23 22:22:19 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * MDE/GME/naomi/GNC.cpp:
-        
+
           File was missing from the repo.
-          
+
         * MDE/GME/naomi/GNC_App.h:
         * MDE/GME/naomi/GNC_App.cpp:
 
           Now is it possible to write simple attributes to XML files.
-          
+
 Wed Apr 23 19:21:14 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * MDE/GME/naomi:
